metadata/force-app/main/default/objects/CustomName_UhBvI__c/CustomName_UhBvI__c.object-meta.xml
<CustomObject>
    <description>Description_NQxfX</description>
    <label>CustomLabel_rmWdy</label>
    <nameField>
        <label>CustomLabel_rmWdy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_rmWdys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>