metadata/force-app/main/default/objects/CustomName_UhBvI__c/fields/CustomField_SHzXJ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SHzXJ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldsdNyX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>