metadata/force-app/main/default/objects/CustomName_UhBvI__c/fields/CustomField_YDcTx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YDcTx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhssbj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>